# club-3090

./: .env.example  .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  UPSTREAM_CHANGES.md  cliff.toml
.claude/: TailScale.md
.github/: PULL_REQUEST_TEMPLATE.md
docs/: ADDING_MODELS.md  ANNOUNCEMENT_TEMPLATE.md  ARCHITECTURE.md  BRING_YOUR_OWN.md  CLIFFS.md  CLUSTERS.md  COMPARISONS.md  COMPOSE_GENERATOR.md  CONTAINER_RUNTIMES.md  DTYPE_MATRIX.md  DUAL_CARD.md  EXAMPLES.md  FAQ.md  GETTING_STARTED.md  GLOSSARY.md  HARDWARE.md  HERMESAGENT_SCENARIOS.md  IMAGE_STUDIO.md  INFERENCE_ENGINES.md  KERNEL_MATRIX.md  KV_MATH.md  MULTI_CARD.md  PATCH_POLICY.md  PCIE_P2P.md  PODS.md  PULL.md  PULL_EMIT_DERIVED.md  PULL_GATE.md  QUAD_CARD.md  QUALITY_TEST.md  QUANTIZATION.md  README.md  SINGLE_CARD.history.md  SINGLE_CARD.md  STRUCTURED_COT.md  TQ3_MTP_GENESIS.md  UPSTREAM.md  VIDEO_STUDIO.md  WSL_SETUP.md
lmcache-kv/: .gitignore
results-nvlink/: diffusionGemma_post436.md  diffusionGemma_pre436.md
runpod/: .dockerignore  Dockerfile  README.md  download-model.sh  entrypoint.sh
scripts/: arch-ab.sh  beellama-pin-bump.sh  bench-agentic.sh  bench.sh  catalog-baseline.sh  cluster.sh  pod.sh  (+27 more)
tools/tui-core/: pyproject.toml
tools/tui-core/club3090_tui_core/: __init__.py  detect.py  parsers.py  registry.py  runner.py
tools/tui-core/club3090_tui_core/widgets/: __init__.py  history_view.py  live_pane.py  manual_target.py
tools/tui-core/tests/: test_core_detect.py  test_core_parsers.py  test_core_registry.py  test_core_runner.py  test_live_pane.py
(+666 files in other folders)
