[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "club3090-tui-core"
version = "0.1.0"
description = "Shared TUI core for the club-3090 test console and serve cockpit"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.60",
    "rich>=13.0",
    "httpx>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["club3090_tui_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
    "ignore::DeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]
